--- a/master.html
+++ b/master.html
@@ -39,6 +39,9 @@
       function displayView() {
         ws.send("VIEW");
       }
+      function sendResult(key) {
+        ws.send(key + ":" + document.getElementById(key).value);
+      }
     </script>
   </head>
   <body>
@@ -48,5 +51,31 @@
     <button onclick="displayTable()">TABLE</button>
     <h1>Score:</h1>
     <h2><div id='pings'></div></h2>
+
+    <table class="tftable" border="1">
+      <tr><th>Header 1</th><th>Header 2</th><th>Header 3</th><th>Header 4</th><th>Header 5</th><th>Header 6</th></tr>
+      <tr><td><input type="text" id="1-1" onchange="sendResult(this.id)">-<input type="text" id="1-2" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="1-3" onchange="sendResult(this.id)">-<input type="text" id="1-4" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="1-5" onchange="sendResult(this.id)">-<input type="text" id="1-6" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="1-7" onchange="sendResult(this.id)">-<input type="text" id="1-8" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="1-9" onchange="sendResult(this.id)">-<input type="text" id="1-10" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="1-11" onchange="sendResult(this.id)">-<input type="text" id="1-12" onchange="sendResult(this.id)"></td>
+      </tr>
+      <tr><td><input type="text" id="2-1" onchange="sendResult(this.id)">-<input type="text" id="2-2" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="2-3" onchange="sendResult(this.id)">-<input type="text" id="2-4" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="2-5" onchange="sendResult(this.id)">-<input type="text" id="2-6" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="2-7" onchange="sendResult(this.id)">-<input type="text" id="2-8" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="2-9" onchange="sendResult(this.id)">-<input type="text" id="2-10" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="2-11" onchange="sendResult(this.id)">-<input type="text" id="2-12" onchange="sendResult(this.id)"></td>
+      </tr>
+      <tr><td><input type="text" id="3-1" onchange="sendResult(this.id)">-<input type="text" id="3-2" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="3-3" onchange="sendResult(this.id)">-<input type="text" id="3-4" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="3-5" onchange="sendResult(this.id)">-<input type="text" id="3-6" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="3-7" onchange="sendResult(this.id)">-<input type="text" id="3-8" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="3-9" onchange="sendResult(this.id)">-<input type="text" id="3-10" onchange="sendResult(this.id)"></td>
+          <td><input type="text" id="3-11" onchange="sendResult(this.id)">-<input type="text" id="3-12" onchange="sendResult(this.id)"></td>
+      </tr>
+</table>
+
   </body>
 </html>
