--- a/table.html
+++ b/table.html
@@ -30,7 +30,12 @@
           window.location.replace('/table.html');
         } else if (scores[0] == "VIEW") {
           window.location.replace('/viewer.html');
-        }
+        } else {
+          var cell = document.getElementById(scores[0]);
+          if (cell != null) {
+             cell.innerHTML = scores[1];
+          }
+       }
 
       };
     </script>
@@ -38,18 +43,29 @@
   <body>
     <table class="tftable" border="1">
       <tr><th>Header 1</th><th>Header 2</th><th>Header 3</th><th>Header 4</th><th>Header 5</th><th>Header 6</th></tr>
-      <tr><td>Row:1 Cell:1</td><td>Row:1 Cell:2</td><td>Row:1 Cell:3</td><td>Row:1 Cell:4</td><td>Row:1 Cell:5</td><td>Row:1 Cell:6</td></tr>
-      <tr><td>Row:2 Cell:1</td><td>Row:2 Cell:2</td><td>Row:2 Cell:3</td><td>Row:2 Cell:4</td><td>Row:2 Cell:5</td><td>Row:2 Cell:6</td></tr>
-      <tr><td>Row:3 Cell:1</td><td>Row:3 Cell:2</td><td>Row:3 Cell:3</td><td>Row:3 Cell:4</td><td>Row:3 Cell:5</td><td>Row:3 Cell:6</td></tr>
-      <tr><td>Row:4 Cell:1</td><td>Row:4 Cell:2</td><td>Row:4 Cell:3</td><td>Row:4 Cell:4</td><td>Row:4 Cell:5</td><td>Row:4 Cell:6</td></tr>
-      <tr><td>Row:5 Cell:1</td><td>Row:5 Cell:2</td><td>Row:5 Cell:3</td><td>Row:5 Cell:4</td><td>Row:5 Cell:5</td><td>Row:5 Cell:6</td></tr>
-      <tr><td>Row:6 Cell:1</td><td>Row:6 Cell:2</td><td>Row:6 Cell:3</td><td>Row:6 Cell:4</td><td>Row:6 Cell:5</td><td>Row:6 Cell:6</td></tr>
-      <tr><td>Row:7 Cell:1</td><td>Row:7 Cell:2</td><td>Row:7 Cell:3</td><td>Row:7 Cell:4</td><td>Row:7 Cell:5</td><td>Row:7 Cell:6</td></tr>
-      <tr><td>Row:8 Cell:1</td><td>Row:8 Cell:2</td><td>Row:8 Cell:3</td><td>Row:8 Cell:4</td><td>Row:8 Cell:5</td><td>Row:8 Cell:6</td></tr>
-      <tr><td>Row:9 Cell:1</td><td>Row:9 Cell:2</td><td>Row:9 Cell:3</td><td>Row:9 Cell:4</td><td>Row:9 Cell:5</td><td>Row:9 Cell:6</td></tr>
-      <tr><td>Row:10 Cell:1</td><td>Row:10 Cell:2</td><td>Row:10 Cell:3</td><td>Row:10 Cell:4</td><td>Row:10 Cell:5</td><td>Row:10 Cell:6</td></tr>
-      <tr><td>Row:11 Cell:1</td><td>Row:11 Cell:2</td><td>Row:11 Cell:3</td><td>Row:11 Cell:4</td><td>Row:11 Cell:5</td><td>Row:11 Cell:6</td></tr>
+      <tr><td><div id="1-1"></div>-<div id="1-2"></div></td>
+          <td><div id="1-3"></div>-<div id="1-4"></div></td>
+          <td><div id="1-5"></div>-<div id="1-6"></div></td>
+          <td><div id="1-7"></div>-<div id="1-8"></div></td>
+          <td><div id="1-9"></div>-<div id="1-10"></div></td>
+          <td><div id="1-11"></div>-<div id="1-12"></div></td>
+      </tr>
+      <tr><td><div id="2-1"></div>-<div id="2-2"></div></td>
+          <td><div id="2-3"></div>-<div id="2-4"></div></td>
+          <td><div id="2-5"></div>-<div id="2-6"></div></td>
+          <td><div id="2-7"></div>-<div id="2-8"></div></td>
+          <td><div id="2-9"></div>-<div id="2-10"></div></td>
+          <td><div id="2-11"></div>-<div id="2-12"></div></td>
+      </tr>
+      <tr><td><div id="3-1"></div>-<div id="3-2"></div></td>
+          <td><div id="3-3"></div>-<div id="3-4"></div></td>
+          <td><div id="3-5"></div>-<div id="3-6"></div></td>
+          <td><div id="3-7"></div>-<div id="3-8"></div></td>
+          <td><div id="3-9"></div>-<div id="3-10"></div></td>
+          <td><div id="3-11"></div>-<div id="3-12"></div></td>
+      </tr>
 </table>
+
 
   </body>
 </html>
