--- a/master.html
+++ b/master.html
@@ -36,10 +36,17 @@
       function displayTable() {
         ws.send("TABLE");
       }
+      function sendAll() {
+        for(var els = document.getElementsByTagName ('input'), i = els.length; i--;){
+          sendResult(els[i].id);
+        }
+      }
       function displayView() {
         ws.send("VIEW");
       }
       function sendResult(key) {
+        //alert(document.getElementById(key).value);
+
         ws.send(key + ":" + document.getElementById(key).value);
       }
     </script>
@@ -50,32 +57,53 @@
     <button onclick="displayView()">VIEW</button>
     <button onclick="displayTable()">TABLE</button>
     <h1>Score:</h1>
-    <h2><div id='pings'></div></h2>
+    <h2><div id='pings' onchange="sendResult(this.id)"></div></h2>
 
-    <table class="tftable" border="1">
-      <tr><th>Header 1</th><th>Header 2</th><th>Header 3</th><th>Header 4</th><th>Header 5</th><th>Header 6</th></tr>
-      <tr><td><input type="text" id="1-1" onchange="sendResult(this.id)">-<input type="text" id="1-2" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="1-3" onchange="sendResult(this.id)">-<input type="text" id="1-4" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="1-5" onchange="sendResult(this.id)">-<input type="text" id="1-6" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="1-7" onchange="sendResult(this.id)">-<input type="text" id="1-8" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="1-9" onchange="sendResult(this.id)">-<input type="text" id="1-10" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="1-11" onchange="sendResult(this.id)">-<input type="text" id="1-12" onchange="sendResult(this.id)"></td>
+    <table>
+      <tr><th></th><th>Round 1</th><th>Round 2</th><th>Round 3</th></tr>
+      <tr><th rowspan="3">Longsword</th>
+          <td><input type="text" id="1-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-2" onchange="sendResult(this.id)"></input><input type="text" id="1-1-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-4" onchange="sendResult(this.id)"></input><input type="text" id="1-1-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-6" onchange="sendResult(this.id)"></input><input type="text" id="1-1-6-n" onchange="sendResult(this.id)"></input></td>
       </tr>
-      <tr><td><input type="text" id="2-1" onchange="sendResult(this.id)">-<input type="text" id="2-2" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="2-3" onchange="sendResult(this.id)">-<input type="text" id="2-4" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="2-5" onchange="sendResult(this.id)">-<input type="text" id="2-6" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="2-7" onchange="sendResult(this.id)">-<input type="text" id="2-8" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="2-9" onchange="sendResult(this.id)">-<input type="text" id="2-10" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="2-11" onchange="sendResult(this.id)">-<input type="text" id="2-12" onchange="sendResult(this.id)"></td>
+      <tr><td><input type="text" id="1-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-2" onchange="sendResult(this.id)"></input><input type="text" id="1-2-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-4" onchange="sendResult(this.id)"></input><input type="text" id="1-2-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-6" onchange="sendResult(this.id)"></input><input type="text" id="1-2-6-n" onchange="sendResult(this.id)"></input></td>
       </tr>
-      <tr><td><input type="text" id="3-1" onchange="sendResult(this.id)">-<input type="text" id="3-2" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="3-3" onchange="sendResult(this.id)">-<input type="text" id="3-4" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="3-5" onchange="sendResult(this.id)">-<input type="text" id="3-6" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="3-7" onchange="sendResult(this.id)">-<input type="text" id="3-8" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="3-9" onchange="sendResult(this.id)">-<input type="text" id="3-10" onchange="sendResult(this.id)"></td>
-          <td><input type="text" id="3-11" onchange="sendResult(this.id)">-<input type="text" id="3-12" onchange="sendResult(this.id)"></td>
+      <tr><td><input type="text" id="1-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-2" onchange="sendResult(this.id)"></input><input type="text" id="1-3-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-4" onchange="sendResult(this.id)"></input><input type="text" id="1-3-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="1-3-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-6" onchange="sendResult(this.id)"></input><input type="text" id="1-3-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr style="height:5"></tr>
+      <tr><th rowspan="3">Sword &amp; Shield</th>
+          <td><input type="text" id="2-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-2" onchange="sendResult(this.id)"></input><input type="text" id="2-1-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-4" onchange="sendResult(this.id)"></input><input type="text" id="2-1-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-6" onchange="sendResult(this.id)"></input><input type="text" id="2-1-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr><td><input type="text" id="2-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-2" onchange="sendResult(this.id)"></input><input type="text" id="2-2-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-4" onchange="sendResult(this.id)"></input><input type="text" id="2-2-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-6" onchange="sendResult(this.id)"></input><input type="text" id="2-2-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr><td><input type="text" id="2-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-2" onchange="sendResult(this.id)"></input><input type="text" id="2-3-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-4" onchange="sendResult(this.id)"></input><input type="text" id="2-3-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="2-3-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-6" onchange="sendResult(this.id)"></input><input type="text" id="2-3-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr style="height:5"></tr>
+      <tr><th rowspan="3">Polearm</th>
+          <td><input type="text" id="3-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-2" onchange="sendResult(this.id)"></input><input type="text" id="3-1-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="3-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-4" onchange="sendResult(this.id)"></input><input type="text" id="3-1-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="3-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-6" onchange="sendResult(this.id)"></input><input type="text" id="3-1-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr><td><input type="text" id="3-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-2" onchange="sendResult(this.id)"></input><input type="text" id="3-2-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="3-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-4" onchange="sendResult(this.id)"></input><input type="text" id="3-2-4-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="3-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-6" onchange="sendResult(this.id)"></input><input type="text" id="3-2-6-n" onchange="sendResult(this.id)"></input></td>
+      </tr>
+      <tr><td><input type="text" id="3-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-3-2" onchange="sendResult(this.id)"></input><input type="text" id="3-3-2-n" onchange="sendResult(this.id)"></input></td>
+          <td><input type="text" id="3-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-3-4" onchange="sendResult(this.id)"></input><input type="text" id="3-3-4-n" onchange="sendResult(this.id)"></input></td>
       </tr>
 </table>
+
+
 
   </body>
 </html>
