updated table layout

--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
-    height:100%;
+    height:20%;
     margin:0px;padding:0px;
 }
 .tftable {
@@ -17,7 +17,7 @@
     margin:0px;padding:0px;
     width:100%;
     box-shadow: 10px 10px 5px #888888;
-    border:1px solid #7f0000;
+    border:1px solid black;
     
     -moz-border-radius-bottomleft:6px;
     -webkit-border-bottom-left-radius:6px;
@@ -38,7 +38,7 @@
     border-collapse: collapse;
         border-spacing: 0;
     width:100%;
-    height:100%;
+    height:60%;
     margin:0px;padding:0px;
 }.tftable tr:last-child td:last-child {
     -moz-border-radius-bottomright:6px;
@@ -64,8 +64,8 @@
 .tftable td{
     vertical-align:middle;
     background-color:#e5e5e5;
-    border:1px solid #7f0000;
-    border-width:0px 1px 1px 0px;
+    border:1px solid black;
+    border-width:1px 1px 1px 1px;
     text-align:center;
     padding:4px;
     font-size:16px;
@@ -73,54 +73,50 @@
     font-weight:normal;
     color:#000000;
 }.tftable tr:last-child td{
-    border-width:0px 1px 0px 0px;
+    border-width:1px 1px 1px 1px;
 }.tftable tr th:first-child{
-    background: #8f0222;
+    background: #98bede;
     font-size:22px;
     font-family:Arial;
     font-weight:normal;
     max-width:80px;
-    color:#ffffff;
+    color:#000000;
 }.tftable tr td:last-child{
-    border-width:0px 0px 1px 0px;
+    border-width:1px 1px 1px 1px;
 }.tftable tr:last-child td:last-child{
-    border-width:0px 0px 0px 0px;
+    border-width:1px 1px 1px 1px;
 }
 .tftable tr:first-child {
-    background: #a90329; /* Old browsers */
-    background: -moz-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #a90329 0%,#8f0222 44%,#6d0019 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
-    border:0px solid #7f0000;
+    background: #deefff; /* Old browsers */
+    background: -moz-linear-gradient(top, #deefff 0%, #deefff 44%, #98bede 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(44%,#deefff), color-stop(100%,#98bede)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #deefff 0%,#deefff 44%,#98bede 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#98bede',GradientType=0 ); /* IE6-9 */
     text-align:center;
-    border-width:0px 0px 1px 1px;
-    font-size:32px;
+    border-width:1px 1px 1px 1px;
+    font-size:24px;
     font-family:Arial;
-    font-weight:bold;
-    color:#ffffff;
-    border-width:0px 0px 1px 0px;
+    font-weight:normal;
+    color:#000000;
 }
 .tftable tr:first-child th:first-child{
-    background: #a90329; /* Old browsers */
-    background: -moz-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #a90329 0%,#8f0222 44%,#6d0019 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
-    border:0px solid #7f0000;
+    background: #deefff; /* Old browsers */
+    background: -moz-linear-gradient(top, #deefff 0%, #deefff 44%, #98bede 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(44%,#deefff), color-stop(100%,#98bede)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #deefff 0%,#deefff 44%,#98bede 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#98bede',GradientType=0 ); /* IE6-9 */
     text-align:center;
-    border-width:0px 0px 1px 1px;
-    font-size:32px;
+    border-width:1px 1px 1px 1px;
+    font-size:24px;
     font-family:Arial;
-    font-weight:bold;
-    color:#ffffff;
-    border-width:0px 0px 1px 0px;
+    font-weight:normal;
+    color:#000000;
 
 }
 .tftable tr:first-child td:last-child{
@@ -128,21 +124,21 @@
 }
 
 .vertab tr {
-    background: #a90329; /* Old browsers */
-    background: -moz-linear-gradient(top, #a90329 0%, #8f0222 44%, #6d0019 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #a90329 0%,#8f0222 44%,#6d0019 100%); /* IE10+ */
-    background: linear-gradient(to bottom, #a90329 0%,#8f0222 44%,#6d0019 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
-    border:0px solid #7f0000;
+    background: #deefff; /* Old browsers */
+    background: -moz-linear-gradient(top, #deefff 0%, #deefff 44%, #98bede 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deefff), color-stop(44%,#deefff), color-stop(100%,#98bede)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #deefff 0%,#deefff 44%,#98bede 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #deefff 0%,#deefff 44%,#98bede 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deefff', endColorstr='#98bede',GradientType=0 ); /* IE6-9 */
+    border:0px solid black;
     text-align:center;
     border-width:0px 0px 1px 1px;
     font-size:24px;
     font-family:Arial;
-    font-weight:bold;
-    color:#ffffff;
+    font-weight:normal;
+    color:#000000;
     border-width:0px 0px 1px 0px;
 }
 div{
@@ -186,49 +182,132 @@ div{
   </head>
   <body>
     <div class="view">
+    <table>
+      <tr></tr>
+      <tr></tr>
+    </table>
+    </div>
+    <div class="view">
+    <table>
+      <tr>
+        <td>Team1</td>
+        <td>Tanaka</td>
+        <td>VS</td>
+        <td>Joshua</td>
+        <td>Team2</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>123</td>
+        <td></td>
+        <td>345</td>
+        <td></td>
+      </tr>
+    </table>
     <div class = "tftable">
     <table>
-      <tr><th></th><th>Round 1</th><th>Round 2</th><th>Round 3</th></tr>
-      <tr><th rowspan="3">Longsword</th>
-          <td><div id="1-1-1-n"></div><div id="1-1-1"></div><div>-</div><div id="1-1-2"></div><div id="1-1-2-n"></div></td>
-          <td><div id="1-1-3-n"></div><div id="1-1-3"></div><div>-</div><div id="1-1-4"></div><div id="1-1-4-n"></div></td>
-          <td><div id="1-1-5-n"></div><div id="1-1-5"></div><div>-</div><div id="1-1-6"></div><div id="1-1-6-n"></div></td>
+      <tr>
+        <th style="border-width:1px;border-style:solid;"></th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
+      <tr><th rowspan="2">Team1</th>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
       </tr>
-      <tr><td><div id="1-2-1-n"></div><div id="1-2-1"></div><div>-</div><div id="1-2-2"></div><div id="1-2-2-n"></div></td>
-          <td><div id="1-2-3-n"></div><div id="1-2-3"></div><div>-</div><div id="1-2-4"></div><div id="1-2-4-n"></div></td>
-          <td><div id="1-2-5-n"></div><div id="1-2-5"></div><div>-</div><div id="1-2-6"></div><div id="1-2-6-n"></div></td>
+      <tr><td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
-      <tr><td><div id="1-3-1-n"></div><div id="1-3-1"></div><div>-</div><div id="1-3-2"></div><div id="1-3-2-n"></div></td>
-          <td><div id="1-3-3-n"></div><div id="1-3-3"></div><div>-</div><div id="1-3-4"></div><div id="1-3-4-n"></div></td>
-          <td><div id="1-3-5-n"></div><div id="1-3-5"></div><div>-</div><div id="1-3-6"></div><div id="1-3-6-n"></div></td>
+
+      <tr><th rowspan="2">Team1</th>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
       </tr>
-      <tr style="height:5"></tr>
-      <tr><th rowspan="3">Sword &amp; Shield</th>
-          <td><div id="2-1-1-n"></div><div id="2-1-1"></div><div>-</div><div id="2-1-2"></div><div id="2-1-2-n"></div></td>
-          <td><div id="2-1-3-n"></div><div id="2-1-3"></div><div>-</div><div id="2-1-4"></div><div id="2-1-4-n"></div></td>
-          <td><div id="2-1-5-n"></div><div id="2-1-5"></div><div>-</div><div id="2-1-6"></div><div id="2-1-6-n"></div></td>
+      <tr><td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
-      <tr><td><div id="2-2-1-n"></div><div id="2-2-1"></div><div>-</div><div id="2-2-2"></div><div id="2-2-2-n"></div></td>
-          <td><div id="2-2-3-n"></div><div id="2-2-3"></div><div>-</div><div id="2-2-4"></div><div id="2-2-4-n"></div></td>
-          <td><div id="2-2-5-n"></div><div id="2-2-5"></div><div>-</div><div id="2-2-6"></div><div id="2-2-6-n"></div></td>
+
+      <tr><th rowspan="2">Team1</th>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
       </tr>
-      <tr><td><div id="2-3-1-n"></div><div id="2-3-1"></div><div>-</div><div id="2-3-2"></div><div id="2-3-2-n"></div></td>
-          <td><div id="2-3-3-n"></div><div id="2-3-3"></div><div>-</div><div id="2-3-4"></div><div id="2-3-4-n"></div></td>
-          <td><div id="2-3-5-n"></div><div id="2-3-5"></div><div>-</div><div id="2-3-6"></div><div id="2-3-6-n"></div></td>
-      </tr>
-      <tr style="height:5"></tr>
-      <tr><th rowspan="3">Polearm</th>
-          <td><div id="3-1-1-n"></div><div id="3-1-1"></div><div>-</div><div id="3-1-2"></div><div id="3-1-2-n"></div></td>
-          <td><div id="3-1-3-n"></div><div id="3-1-3"></div><div>-</div><div id="3-1-4"></div><div id="3-1-4-n"></div></td>
-          <td><div id="3-1-5-n"></div><div id="3-1-5"></div><div>-</div><div id="3-1-6"></div><div id="3-1-6-n"></div></td>
-      </tr>
-      <tr><td><div id="3-2-1-n"></div><div id="3-2-1"></div><div>-</div><div id="3-2-2"></div><div id="3-2-2-n"></div></td>
-          <td><div id="3-2-3-n"></div><div id="3-2-3"></div><div>-</div><div id="3-2-4"></div><div id="3-2-4-n"></div></td>
-          <td><div id="3-2-5-n"></div><div id="3-2-5"></div><div>-</div><div id="3-2-6"></div><div id="3-2-6-n"></div></td>
-      </tr>
-      <tr><td><div id="3-3-1-n"></div><div id="3-3-1"></div><div>-</div><div id="3-3-2"></div><div id="3-3-2-n"></div></td>
-          <td><div id="3-3-3-n"></div><div id="3-3-3"></div><div>-</div><div id="3-3-4"></div><div id="3-3-4-n"></div></td>
-          <td><div id="3-3-5-n"></div><div id="3-3-5"></div><div>-</div><div id="3-3-6"></div><div id="3-3-6-n"></div></td>
+      <tr><td id="3-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-1-3-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="3-1-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-1-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-1-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="3-2-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-2-3-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="3-2-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-2-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-2-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="3-3-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-3-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-3-3-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="3-3-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="3-3-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="3-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 </table>
 </div>
