Fixed the score sheet data broadcast.

--- a/master.html
+++ b/master.html
@@ -3,7 +3,6 @@
     <style>
       body {
         font-family: "Helvetica Neue", helvetica, arial;
-        padding: 15px;
       }
 
       ul {
@@ -15,6 +14,19 @@
       ul li {
         line-height: 1.4;
       }
+
+.view {
+    margin:0px;padding:0px;
+    width:100%;
+}
+.view table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    width:100%;
+    height:20%;
+    margin:0px;padding:0px;
+}
+
     </style>
 
     <script>
@@ -54,50 +66,117 @@
     <h1>Score:</h1>
     <h2><div id='pings' onchange="sendResult(this.id)"></div></h2>
 
+<div class="view">
     <table>
-      <tr><th></th><th>Round 1</th><th>Round 2</th><th>Round 3</th></tr>
-      <tr><th rowspan="3">Longsword</th>
-          <td><input type="text" id="1-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-2" onchange="sendResult(this.id)"></input><input type="text" id="1-1-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-4" onchange="sendResult(this.id)"></input><input type="text" id="1-1-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-1-6" onchange="sendResult(this.id)"></input><input type="text" id="1-1-6-n" onchange="sendResult(this.id)"></input></td>
+      <tr>
+        <th style="border-width:1px;border-style:solid;"></th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Sword &amp; Shield</th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
+        <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
+      <tr><th rowspan="2">Team1</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
-      <tr><td><input type="text" id="1-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-2" onchange="sendResult(this.id)"></input><input type="text" id="1-2-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-4" onchange="sendResult(this.id)"></input><input type="text" id="1-2-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-2-6" onchange="sendResult(this.id)"></input><input type="text" id="1-2-6-n" onchange="sendResult(this.id)"></input></td>
+
+      <tr><td><input size="3" id="1-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-1-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-1-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="1-1-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-1-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-1-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="1-2-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-2-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-2-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="1-2-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-2-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-2-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="1-3-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-3-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-3-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="1-3-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-3-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="1-3-3-t" type="text" onchange="sendResult(this.id)"></input></td>
       </tr>
-      <tr><td><input type="text" id="1-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-2" onchange="sendResult(this.id)"></input><input type="text" id="1-3-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-4" onchange="sendResult(this.id)"></input><input type="text" id="1-3-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="1-3-5-n" onchange="sendResult(this.id)"></input><input type="text" id="1-3-5" onchange="sendResult(this.id)"></input>-<input type="text" id="1-3-6" onchange="sendResult(this.id)"></input><input type="text" id="1-3-6-n" onchange="sendResult(this.id)"></input></td>
+
+
+      <tr><th rowspan="2">Team2</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
-      <tr style="height:5"></tr>
-      <tr><th rowspan="3">Sword &amp; Shield</th>
-          <td><input type="text" id="2-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-2" onchange="sendResult(this.id)"></input><input type="text" id="2-1-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-4" onchange="sendResult(this.id)"></input><input type="text" id="2-1-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-1-6" onchange="sendResult(this.id)"></input><input type="text" id="2-1-6-n" onchange="sendResult(this.id)"></input></td>
+
+      <tr><td><input size="3" id="2-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-1-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-1-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="2-1-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-1-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-1-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="2-2-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-2-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-2-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="2-2-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-2-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-2-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="2-3-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-3-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-3-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="2-3-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-3-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="2-3-3-t" type="text" onchange="sendResult(this.id)"></input></td>
       </tr>
-      <tr><td><input type="text" id="2-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-2" onchange="sendResult(this.id)"></input><input type="text" id="2-2-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-4" onchange="sendResult(this.id)"></input><input type="text" id="2-2-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-2-6" onchange="sendResult(this.id)"></input><input type="text" id="2-2-6-n" onchange="sendResult(this.id)"></input></td>
+
+
+      <tr><th rowspan="2">Team3</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
-      <tr><td><input type="text" id="2-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-2" onchange="sendResult(this.id)"></input><input type="text" id="2-3-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-4" onchange="sendResult(this.id)"></input><input type="text" id="2-3-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="2-3-5-n" onchange="sendResult(this.id)"></input><input type="text" id="2-3-5" onchange="sendResult(this.id)"></input>-<input type="text" id="2-3-6" onchange="sendResult(this.id)"></input><input type="text" id="2-3-6-n" onchange="sendResult(this.id)"></input></td>
-      </tr>
-      <tr style="height:5"></tr>
-      <tr><th rowspan="3">Polearm</th>
-          <td><input type="text" id="3-1-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-2" onchange="sendResult(this.id)"></input><input type="text" id="3-1-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="3-1-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-4" onchange="sendResult(this.id)"></input><input type="text" id="3-1-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="3-1-5-n" onchange="sendResult(this.id)"></input><input type="text" id="3-1-5" onchange="sendResult(this.id)"></input>-<input type="text" id="3-1-6" onchange="sendResult(this.id)"></input><input type="text" id="3-1-6-n" onchange="sendResult(this.id)"></input></td>
-      </tr>
-      <tr><td><input type="text" id="3-2-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-2" onchange="sendResult(this.id)"></input><input type="text" id="3-2-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="3-2-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-4" onchange="sendResult(this.id)"></input><input type="text" id="3-2-4-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="3-2-5-n" onchange="sendResult(this.id)"></input><input type="text" id="3-2-5" onchange="sendResult(this.id)"></input>-<input type="text" id="3-2-6" onchange="sendResult(this.id)"></input><input type="text" id="3-2-6-n" onchange="sendResult(this.id)"></input></td>
-      </tr>
-      <tr><td><input type="text" id="3-3-1-n" onchange="sendResult(this.id)"></input><input type="text" id="3-3-1" onchange="sendResult(this.id)"></input>-<input type="text" id="3-3-2" onchange="sendResult(this.id)"></input><input type="text" id="3-3-2-n" onchange="sendResult(this.id)"></input></td>
-          <td><input type="text" id="3-3-3-n" onchange="sendResult(this.id)"></input><input type="text" id="3-3-3" onchange="sendResult(this.id)"></input>-<input type="text" id="3-3-4" onchange="sendResult(this.id)"></input><input type="text" id="3-3-4-n" onchange="sendResult(this.id)"></input></td>
+      <tr><td><input size="3" id="3-1-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-1-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-1-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="3-1-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-1-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-1-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="3-2-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-2-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-2-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="3-2-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-2-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-2-3-t" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="3-3-1-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-3-2-n" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-3-3-n" type="text" onchange="sendResult(this.id)"></input></td>
+
+          <td><input size="3" id="3-3-1-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-3-2-t" type="text" onchange="sendResult(this.id)"></input></td>
+          <td><input size="3" id="3-3-3-t" type="text" onchange="sendResult(this.id)"></input></td>
       </tr>
 </table>
-
+</div>
 
 
   </body>
