--- a/table.html
+++ b/table.html
@@ -149,13 +149,6 @@ div{
     </style>
 
     <script>
-      window.onload = function () {
-        for(var els = document.getElementsByTagName ('div'), i = els.length; i--;){
-          if(els[i].id != null){
-          ws.send(els[i].id + ":?" );}
-        }
-      };
-
       //var host = window.location.origin.replace(/^http/, 'ws')
       var host = "ws://" + window.location.hostname + ":" + window.location.port; 
       var ws = new WebSocket(host);
@@ -173,10 +166,13 @@ div{
         } else {
           var cell = document.getElementById(scores[0]);
           if (cell != null) {
+          alert(cell);
              cell.innerHTML = scores[1];
           }
        }
-
+      };
+      window.onload=function(){
+        ws.send("GET");
       };
     </script>
   </head>
@@ -212,78 +208,78 @@ div{
         <th colspan="6" style="border-width:1px;border-style:solid;">Longsword</th>
         <th colspan="6" style="border-width:1px;border-style:solid;">Poleaxe</th></tr>
       <tr><th rowspan="2">Team1</th>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
       <tr><td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-1-3-n" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-1-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-1-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-1-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
+
+          <td id="1-2-1-n" style="border-style:dotted dotted solid solid;"></td>
           <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+          <td id="1-2-3-n" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+          <td id="1-2-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-2-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-2-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+          <td id="1-3-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-3-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-3-3-n" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
-
-          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
-
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+          <td id="1-3-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="1-3-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="1-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 
-      <tr><th rowspan="2">Team1</th>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
+      <tr><th rowspan="2">Team2</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
-      <tr><td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+      <tr><td id="2-1-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-1-3-n" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+          <td id="2-1-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-1-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-1-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+          <td id="2-2-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-2-3-n" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+          <td id="2-2-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-2-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-2-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-1-1-n" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" style="border-style:dotted solid solid dotted;"></td>
+          <td id="2-3-1-n" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-3-2-n" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-3-3-n" style="border-style:dotted solid solid dotted;"></td>
 
-          <td id="1-2-1-n" width="14px" style="border-style:dotted dotted solid solid;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted dotted solid dotted;"></td>
-          <td id="1-2-2-n" width="14px" style="border-style:dotted solid solid dotted;"></td>
+          <td id="2-3-1-t" width="14px" style="border-style:dotted dotted solid solid;"></td>
+          <td id="2-3-2-t" width="14px" style="border-style:dotted dotted solid dotted;"></td>
+          <td id="2-3-3-t" width="14px" style="border-style:dotted solid solid dotted;"></td>
       </tr>
 
-      <tr><th rowspan="2">Team1</th>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-1-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-2-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-3-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-4-n">Total</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-5-n">Tanaka</div></td>
-          <td colspan="3" style="border-style:dotted solid;"><div id="1-1-6-n">Total</div></td>
+      <tr><th rowspan="2">Team3</th>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Tanaka</div></td>
+          <td colspan="3" style="border-style:dotted solid;"><div>Total</div></td>
       </tr>
       <tr><td id="3-1-1-n" style="border-style:dotted dotted solid solid;"></td>
           <td id="3-1-2-n" style="border-style:dotted dotted solid dotted;"></td>
