--- a/counter.html
+++ b/counter.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
     <style>
       body {
         font-family: "Helvetica Neue", helvetica, arial;
@@ -11,9 +13,14 @@
         margin: 0;
         padding: 0;
       }
-
+ 
       ul li {
         line-height: 1.4;
+      }
+
+      button {
+        width: 400px; 
+        height: 400px; 
       }
     </style>
 
