--- a/table.html
+++ b/table.html
@@ -158,9 +158,12 @@ div{
         //document.querySelector('#pings').innerHTML = JSON.parse(event.data);
         var scores = JSON.parse(event.data);
 
-        if (scores[0] == "TABLE") {
+        if (scores[0] == "ROUND1") {
           window.location.replace('/table.html');
-          //getAll();
+        } else if (scores[0] == "ROUND2") {
+          window.location.replace('/table.html');
+        } else if (scores[0] == "ROUND3") {
+          window.location.replace('/table.html');
         } else if (scores[0] == "VIEW") {
           window.location.replace('/viewer.html');
         } else {
